libs/pavex_cli/tests/ui_tests/singletons_must_be_clonable/expectations/stderr.txt
Error: 
  × `hello,` is not a valid import path.
   ╭─[src/lib.rs:3:1]
 3 │ pub fn blueprint() -> AppBlueprint {
 4 │     AppBlueprint::new().route("hello,", "/home")
   ·                               ────┬───
   ·                                   ╰── The invalid import path was registered here
 5 │ }
   ╰────